--- a/css/style.css
+++ b/css/style.css
@@ -3914,12 +3914,16 @@ strike:after {
 
 .text-mega {font-size: 20px; line-height:26px}
 
-.sml-font {font-family: 'Montserrat', sans-serif; font-weight: 500; font-size:13px;}
+.sml-font {font-family: 'Montserrat', sans-serif; font-weight: 500; font-size:11px;}
+
+.fit-text {margin-left: -10px !important; margin-right: -10px !important;}
 
 .radio .row.mb-5{
     /*float: left;
     margin-left: -35px;*/
 }
+
+
 
 
 .reserve-cart-header { padding-top: 14px; float: right; letter-spacing: 1px}
